--- a/index.html
+++ b/index.html
@@ -1,261 +1,303 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FA-Tshirt Store</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FA-Tshirt</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+    @font-face {
+      font-family: 'Snap ITC';
+      src: local('Snap ITC');
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
     body {
-      margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background: url('https://i.ibb.co/BzZ7Lt8/dark-wallpaper.jpg') no-repeat center center fixed;
+      font-family: 'Bahnschrift', sans-serif;
+      background: url('https://www.dropbox.com/scl/fi/6scs34cfiffalea8m5r6k/download.jfif?rlkey=9me88jua5fx4vxiizskj1lk3e&st=js2tc74z&raw=1') no-repeat center center fixed;
       background-size: cover;
-      color: white;
+      color: #fff;
     }
 
     header {
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 15px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: rgba(0, 0, 0, 0.8);
-      padding: 10px 20px;
       position: sticky;
       top: 0;
       z-index: 1000;
     }
 
     .logo {
-      font-family: 'SNAP ITC', fantasy;
       font-size: 32px;
-      color: #ff5252;
-      text-shadow: 2px 2px 4px #000;
+      font-family: 'Snap ITC';
+      font-weight: 700;
+      color: #e63946;
+      text-shadow: 2px 2px 0 #000;
     }
 
-    .search-bar input {
-      padding: 6px;
-      width: 300px;
-      border-radius: 20px;
-      border: none;
-      font-size: 16px;
-    }
-
-    .menu {
+    .nav-right {
       display: flex;
-      gap: 15px;
+      align-items: center;
+      gap: 20px;
     }
 
-    .menu a {
+    .nav-links a {
       color: white;
       text-decoration: none;
+      margin: 0 10px;
       font-weight: bold;
     }
 
-    .sidebar {
-      width: 200px;
-      position: fixed;
-      top: 60px;
-      left: 0;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.9);
-      padding: 20px;
+    .nav-links a:hover {
+      color: #ff6b6b;
     }
 
-    .sidebar a {
-      display: block;
+    .search-filter {
+      text-align: center;
+      margin: 20px auto 5px;
+    }
+
+    .search-filter input[type="text"] {
+      padding: 8px;
+      width: 300px;
+      border-radius: 5px;
+      border: none;
+    }
+
+    .category-bar {
+      text-align: center;
       margin: 10px 0;
-      color: white;
-      text-decoration: none;
     }
 
-    .product-list {
-      margin-left: 220px;
+    .category-bar span {
+      color: black;
+      background: rgba(255,255,255,0.8);
+      padding: 5px 15px;
+      margin: 0 5px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 80px 20px 40px;
+      background: rgba(0,0,0,0.4);
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 20px;
+    }
+
+    .products {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 30px;
+      padding: 40px;
+      background: rgba(0,0,0,0.3);
     }
 
     .product {
-      background-color: rgba(255, 255, 255, 0.05);
-      padding: 15px;
+      background: rgba(255,255,255,0.85);
+      color: #000;
       border-radius: 10px;
-      backdrop-filter: blur(10px);
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .product:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #000;
     }
 
     .product img {
       width: 100%;
-      border-radius: 10px;
+      height: 250px;
+      object-fit: cover;
     }
 
-    .product h3 {
-      margin: 10px 0 5px;
-      font-size: 20px;
-      color: #ff9f43;
+    .product-info {
+      padding: 15px;
+      text-align: center;
     }
 
-    .product p {
-      font-size: 14px;
+    .product-info h3 {
+      margin-bottom: 10px;
     }
 
-    .product button {
-      padding: 8px 12px;
-      margin-right: 10px;
+    .buy-btn {
+      background-color: #e63946;
       border: none;
-      border-radius: 5px;
+      color: white;
+      padding: 10px 20px;
       cursor: pointer;
-      font-weight: bold;
+      border-radius: 5px;
     }
 
-    .add-to-cart {
-      background-color: #2ecc71;
-      color: white;
+    .buy-btn:hover {
+      background-color: #d90429;
     }
 
-    .buy-now {
-      background-color: #e74c3c;
-      color: white;
-    }
-
-    .login-popup {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    #about-content {
+      padding: 20px;
+      margin-top: 40px;
+      background: rgba(255, 255, 255, 0.9);
+      color: black;
       display: none;
     }
 
-    .login-popup.active {
-      display: flex;
-    }
-
-    .login-box {
-      background: #1e1e1e;
-      padding: 30px;
-      border-radius: 10px;
-      animation: popup 0.5s ease;
-      width: 300px;
-    }
-
-    @keyframes popup {
-      from {
-        transform: scale(0.7);
-        opacity: 0;
-      }
-      to {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .login-box input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 5px;
-    }
-
-    .login-box button {
-      width: 100%;
-      padding: 10px;
-      background-color: #3498db;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .cart-page {
-      margin-left: 220px;
+    footer {
+      background: rgba(0, 0, 0, 0.6);
       padding: 20px;
-    }
-
-    .cart-item {
-      background: rgba(255, 255, 255, 0.05);
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 8px;
-    }
-
-    .cart-item button {
-      background: #e67e22;
-      border: none;
-      padding: 5px 10px;
+      text-align: center;
       color: white;
-      border-radius: 5px;
+    }
+
+    #loginPopup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255,255,255,0.95);
+      color: black;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px #000;
+    }
+
+    #loginPopup input {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 10px;
+    }
+
+    #loginPopup button {
+      background: #e63946;
+      color: white;
+      border: none;
+      padding: 10px 15px;
       cursor: pointer;
     }
   </style>
 </head>
-
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
-    <div class="search-bar">
-      <input type="text" placeholder="Search...">
-    </div>
-    <div class="menu">
-      <a href="#" onclick="openLogin()">Login</a>
-      <a href="#cart">Cart</a>
+    <div class="nav-right">
+      <nav class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#products">Products</a>
+        <a href="#about" onclick="showAbout()">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <a href="#" onclick="showLogin()" style="color:white">Login</a>
+      <a href="#" style="color:white">Cart</a>
     </div>
   </header>
 
-  <div class="sidebar">
-    <a href="#">Home</a>
-    <a href="#">Men</a>
-    <a href="#">Women</a>
-    <a href="#">New Arrivals</a>
-    <a href="#">Best Sellers</a>
+  <div class="search-filter">
+    <input type="text" placeholder="Search for t-shirts...">
   </div>
 
-  <div class="product-list">
+  <div class="category-bar">
+    <span>Men</span>
+    <span>Women</span>
+    <span>Kids</span>
+  </div>
+
+  <section class="hero" id="home">
+    <h1>Welcome to FA-Tshirt</h1>
+    <p>Trendy | Comfortable | Affordable</p>
+  </section>
+
+  <section class="products" id="products">
     <div class="product">
-      <img src="https://www.dropbox.com/scl/fi/xl8rcxj1o5lq7ovijyf2m/1.jpg?rlkey=nkrpyb0mnvst1nyw6mgyoxn0h&raw=1" alt="Product 1">
-      <h3>FA Black Logo Tee</h3>
-      <p>Classic black t-shirt with FA logo in red.</p>
-      <p>₹299</p>
-      <button class="add-to-cart">Add to Cart</button>
-      <button class="buy-now">Buy Now</button>
+      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
+      <div class="product-info">
+        <h3>Black Round Neck</h3>
+        <p>₹299</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
     </div>
-    <!-- Repeat for 5 more products as needed -->
-  </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
+      <div class="product-info">
+        <h3>White Graphic Tee</h3>
+        <p>₹349</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
+    </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
+      <div class="product-info">
+        <h3>Red Street Style</h3>
+        <p>₹399</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
+    </div>
+  </section>
 
-  <div class="login-popup" id="loginPopup">
-    <div class="login-box">
-      <h3>Email Login</h3>
-      <input type="email" placeholder="Enter your email">
-      <button onclick="sendOTP()">Send OTP</button>
-      <input type="text" placeholder="Enter OTP">
-      <button>Login</button>
-    </div>
-  </div>
+  <section id="about-content">
+    <h2>Our Story</h2>
+    <p>FA-Tshirt is not just a brand, it's a dream. It started with a passion to create high-quality, stylish, and affordable fashion that represents youth and ambition. Our journey began with a single vision — to bring creativity, comfort, and confidence into every thread we stitch. Thank you for being a part of this journey.</p>
+  </section>
 
-  <div class="cart-page" id="cart">
-    <h2>Your Cart</h2>
-    <div class="cart-item">
-      <p>FA Black Logo Tee - ₹299</p>
-      <button>Remove</button>
-    </div>
-    <button class="buy-now">Checkout</button>
+  <footer>
+    &copy; 2025 FA-Tshirt. All rights reserved.
+  </footer>
+
+  <div id="loginPopup">
+    <h2>Login with OTP</h2>
+    <input type="email" id="email" placeholder="Enter your email">
+    <button onclick="sendOTP()">Send OTP</button>
+    <input type="text" id="otp" placeholder="Enter OTP">
+    <button onclick="verifyOTP()">Verify OTP</button>
   </div>
 
   <script>
-    function openLogin() {
-      document.getElementById('loginPopup').classList.add('active');
+    function showAbout() {
+      document.getElementById('about-content').style.display = 'block';
+      window.scrollTo(0, document.getElementById('about-content').offsetTop);
     }
+    function showLogin() {
+      document.getElementById('loginPopup').style.display = 'block';
+    }
+
+    let generatedOTP = '';
     function sendOTP() {
-      alert('OTP sent to email!');
+      const email = document.getElementById('email').value;
+      if (!email.includes('@')) {
+        alert('Please enter a valid email.');
+        return;
+      }
+      generatedOTP = Math.floor(100000 + Math.random() * 900000).toString();
+      alert(`OTP sent to ${email}: ${generatedOTP}`); // Replace this alert with actual email API in production
+    }
+
+    function verifyOTP() {
+      const enteredOTP = document.getElementById('otp').value;
+      if (enteredOTP === generatedOTP) {
+        alert('Login successful!');
+        document.getElementById('loginPopup').style.display = 'none';
+      } else {
+        alert('Incorrect OTP. Please try again.');
+      }
     }
   </script>
 </body>
-
 </html>
