--- a/index.html
+++ b/index.html
@@ -2,302 +2,260 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FA-Tshirt</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>FA-Tshirt | Trendy Tees</title>
   <style>
-    @font-face {
-      font-family: 'Snap ITC';
-      src: local('Snap ITC');
-    }
-
     * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+      margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif;
     }
-
     body {
-      font-family: 'Bahnschrift', sans-serif;
-      background: url('https://www.dropbox.com/scl/fi/6scs34cfiffalea8m5r6k/download.jfif?rlkey=9me88jua5fx4vxiizskj1lk3e&st=js2tc74z&raw=1') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
+      background: #f2f2f2;
     }
-
     header {
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 15px 30px;
+      background: #000;
+      color: white;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      padding: 15px 30px;
     }
-
-    .logo {
-      font-size: 32px;
-      font-family: 'Snap ITC';
-      font-weight: 700;
-      color: #e63946;
-      text-shadow: 2px 2px 0 #000;
+    header img {
+      height: 40px;
     }
-
-    .nav-right {
+    header .logo {
       display: flex;
       align-items: center;
-      gap: 20px;
     }
-
-    .nav-links a {
+    header .logo span {
+      font-size: 12px;
+      margin-left: 5px;
+    }
+    header .actions button {
+      background: #e50914;
       color: white;
-      text-decoration: none;
-      margin: 0 10px;
-      font-weight: bold;
-    }
-
-    .nav-links a:hover {
-      color: #ff6b6b;
-    }
-
-    .search-filter {
-      text-align: center;
-      margin: 20px auto 5px;
-    }
-
-    .search-filter input[type="text"] {
-      padding: 8px;
-      width: 300px;
-      border-radius: 5px;
       border: none;
-    }
-
-    .category-bar {
-      text-align: center;
-      margin: 10px 0;
-    }
-
-    .category-bar span {
-      color: black;
-      background: rgba(255,255,255,0.8);
-      padding: 5px 15px;
-      margin: 0 5px;
-      border-radius: 5px;
+      padding: 8px 12px;
+      margin-left: 10px;
+      border-radius: 4px;
       cursor: pointer;
+    }
+    .search-bar {
+      text-align: center;
+      margin: 20px;
+    }
+    .search-bar input {
+      padding: 10px;
+      width: 60%;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    nav {
+      background: #fff;
+      display: flex;
+      overflow-x: auto;
+      padding: 10px;
+      border-top: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
+    }
+    nav a {
+      margin-right: 20px;
+      text-decoration: none;
+      color: #000;
       font-weight: bold;
     }
-
-    .hero {
-      text-align: center;
-      padding: 80px 20px 40px;
-      background: rgba(0,0,0,0.4);
-    }
-
-    .hero h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
-
-    .hero p {
-      font-size: 20px;
-    }
-
     .products {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 30px;
-      padding: 40px;
-      background: rgba(0,0,0,0.3);
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 20px;
     }
-
     .product {
-      background: rgba(255,255,255,0.85);
-      color: #000;
-      border-radius: 10px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      text-align: center;
     }
-
-    .product:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px #000;
-    }
-
     .product img {
       width: 100%;
       height: 250px;
       object-fit: cover;
     }
-
-    .product-info {
-      padding: 15px;
-      text-align: center;
-    }
-
-    .product-info h3 {
-      margin-bottom: 10px;
-    }
-
-    .buy-btn {
-      background-color: #e63946;
-      border: none;
-      color: white;
-      padding: 10px 20px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-
-    .buy-btn:hover {
-      background-color: #d90429;
-    }
-
-    #about-content {
-      padding: 20px;
-      margin-top: 40px;
-      background: rgba(255, 255, 255, 0.9);
-      color: black;
-      display: none;
-    }
-
-    footer {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 20px;
-      text-align: center;
-      color: white;
-    }
-
-    #loginPopup {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(255,255,255,0.95);
-      color: black;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #000;
-    }
-
-    #loginPopup input {
-      display: block;
-      width: 100%;
+    .product h3 {
       margin: 10px 0;
+      font-size: 18px;
+    }
+    .product p {
+      padding: 0 10px;
+      font-size: 14px;
+    }
+    .price {
+      color: green;
+      font-weight: bold;
+      margin: 10px 0;
+    }
+    .btns {
+      display: flex;
+      justify-content: space-around;
       padding: 10px;
     }
-
-    #loginPopup button {
-      background: #e63946;
+    .btns button {
+      padding: 8px 12px;
+      background: #000;
       color: white;
       border: none;
-      padding: 10px 15px;
+      border-radius: 4px;
       cursor: pointer;
+    }
+
+    /* Login Popup */
+    .overlay {
+      position: fixed;
+      display: none;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 10;
+    }
+    .login-box {
+      background: white;
+      padding: 30px;
+      max-width: 400px;
+      margin: 100px auto;
+      position: relative;
+      animation: slideIn 0.4s ease;
+      border-radius: 8px;
+    }
+    .login-box h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .login-box input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    .login-box button {
+      width: 100%;
+      padding: 10px;
+      background: #e50914;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    .close-btn {
+      position: absolute;
+      top: 10px; right: 15px;
+      font-size: 20px;
+      cursor: pointer;
+    }
+
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateY(-50px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 600px) {
+      header, .search-bar, nav, .btns {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
 <body>
+
   <header>
-    <div class="logo">FA-Tshirt</div>
-    <div class="nav-right">
-      <nav class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#products">Products</a>
-        <a href="#about" onclick="showAbout()">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <a href="#" onclick="showLogin()" style="color:white">Login</a>
-      <a href="#" style="color:white">Cart</a>
+    <div class="logo">
+      <img src="https://cdn-icons-png.flaticon.com/512/892/892458.png" alt="logo"/>
+      <span>FA-Tshirt</span>
+    </div>
+    <div class="actions">
+      <button onclick="showLogin()">Login</button>
+      <button>Cart</button>
     </div>
   </header>
 
-  <div class="search-filter">
-    <input type="text" placeholder="Search for t-shirts...">
+  <div class="search-bar">
+    <input type="text" placeholder="Search for products..."/>
   </div>
 
-  <div class="category-bar">
-    <span>Men</span>
-    <span>Women</span>
-    <span>Kids</span>
+  <nav>
+    <a href="#">All</a>
+    <a href="#">Men</a>
+    <a href="#">Women</a>
+    <a href="#">Oversized</a>
+    <a href="#">Trendy</a>
+  </nav>
+
+  <div class="products">
+    <div class="product">
+      <img src="https://www.dropbox.com/scl/fi/qg23nbgt17v3c1fjmz9yd/Top-Fashionista-__-Striped-Off-Shoulder-Tops-for-Nautical-Chic.jfif?raw=1" />
+      <h3>Striped Off-Shoulder Top</h3>
+      <p>Nautical chic striped off-shoulder design for fashionistas.</p>
+      <div class="price">₹279</div>
+      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+    </div>
+    <div class="product">
+      <img src="https://www.dropbox.com/scl/fi/jtsaogqxtxzg5llso50j2/Vintage-Vertical-Painting-Over-Fit-T-Shirt.jfif?raw=1" />
+      <h3>Vintage Vertical T-Shirt</h3>
+      <p>Vertical painting print with oversized street fashion vibes.</p>
+      <div class="price">₹299</div>
+      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+    </div>
+    <div class="product">
+      <img src="https://www.dropbox.com/scl/fi/uuigb0k9n6514zebl6h35/Women-s-Men-s-Clothing-Shop-Online-Fashion.jfif?raw=1" />
+      <h3>Unisex Fashion Tee</h3>
+      <p>Trendy t-shirt for men and women available in all sizes.</p>
+      <div class="price">₹259</div>
+      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+    </div>
+    <div class="product">
+      <img src="https://www.dropbox.com/scl/fi/8imuntoe8pyurqcsjt16b/Oversized-T-Shirt-Short-Sleeve-Cotton-T-Shirt-In-Black.jfif?raw=1" />
+      <h3>Black Cotton Oversized</h3>
+      <p>100% cotton black oversized T-shirt – smooth and stylish.</p>
+      <div class="price">₹299</div>
+      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+    </div>
+    <div class="product">
+      <img src="https://www.dropbox.com/scl/fi/kbelphqsfmkatwno9zzbk/_Ultimate-Style_-Men-s-Best-Outfits-with-Drop-Shoulders_-_Drop-Shoulders-Delight_-Men-s-Best-Outfits.jfif?raw=1" />
+      <h3>Drop Shoulder Delight</h3>
+      <p>Men's fashion with ultimate drop shoulder design and fit.</p>
+      <div class="price">₹289</div>
+      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+    </div>
+    <div class="product">
+      <img src="https://www.dropbox.com/scl/fi/w35xp71onk4s5p9hqq40w/Oversized-Drop-Shoulder-T-Shirt-Charcoal-Grey-_-XXS.jfif?raw=1" />
+      <h3>Charcoal Grey XXS Tee</h3>
+      <p>Oversized drop shoulder t-shirt in unique charcoal grey tone.</p>
+      <div class="price">₹269</div>
+      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+    </div>
   </div>
 
-  <section class="hero" id="home">
-    <h1>Welcome to FA-Tshirt</h1>
-    <p>Trendy | Comfortable | Affordable</p>
-  </section>
-
-  <section class="products" id="products">
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
-      <div class="product-info">
-        <h3>Black Round Neck</h3>
-        <p>₹299</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
+  <!-- Login Popup -->
+  <div class="overlay" id="loginOverlay">
+    <div class="login-box">
+      <span class="close-btn" onclick="closeLogin()">&times;</span>
+      <h2>Login to FA-Tshirt</h2>
+      <input type="email" placeholder="Enter Email" />
+      <input type="text" placeholder="Enter OTP" />
+      <button>Login</button>
     </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
-      <div class="product-info">
-        <h3>White Graphic Tee</h3>
-        <p>₹349</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
-      <div class="product-info">
-        <h3>Red Street Style</h3>
-        <p>₹399</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-  </section>
-
-  <section id="about-content">
-    <h2>Our Story</h2>
-    <p>FA-Tshirt is not just a brand, it's a dream. It started with a passion to create high-quality, stylish, and affordable fashion that represents youth and ambition. Our journey began with a single vision — to bring creativity, comfort, and confidence into every thread we stitch. Thank you for being a part of this journey.</p>
-  </section>
-
-  <footer>
-    &copy; 2025 FA-Tshirt. All rights reserved.
-  </footer>
-
-  <div id="loginPopup">
-    <h2>Login with OTP</h2>
-    <input type="email" id="email" placeholder="Enter your email">
-    <button onclick="sendOTP()">Send OTP</button>
-    <input type="text" id="otp" placeholder="Enter OTP">
-    <button onclick="verifyOTP()">Verify OTP</button>
   </div>
 
   <script>
-    function showAbout() {
-      document.getElementById('about-content').style.display = 'block';
-      window.scrollTo(0, document.getElementById('about-content').offsetTop);
-    }
     function showLogin() {
-      document.getElementById('loginPopup').style.display = 'block';
+      document.getElementById("loginOverlay").style.display = "block";
     }
-
-    let generatedOTP = '';
-    function sendOTP() {
-      const email = document.getElementById('email').value;
-      if (!email.includes('@')) {
-        alert('Please enter a valid email.');
-        return;
-      }
-      generatedOTP = Math.floor(100000 + Math.random() * 900000).toString();
-      alert(`OTP sent to ${email}: ${generatedOTP}`); // Replace this alert with actual email API in production
-    }
-
-    function verifyOTP() {
-      const enteredOTP = document.getElementById('otp').value;
-      if (enteredOTP === generatedOTP) {
-        alert('Login successful!');
-        document.getElementById('loginPopup').style.display = 'none';
-      } else {
-        alert('Incorrect OTP. Please try again.');
-      }
+    function closeLogin() {
+      document.getElementById("loginOverlay").style.display = "none";
     }
   </script>
+
 </body>
 </html>
