--- a/index.html
+++ b/index.html
@@ -1,261 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FA-Tshirt | Trendy Tees</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FA-Tshirt | Stylish & Affordable Fashion</title>
   <style>
-    * {
-      margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif;
-    }
     body {
-      background: #f2f2f2;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f5f5;
     }
     header {
-      background: #000;
-      color: white;
+      background-color: #000;
+      color: #fff;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 15px 30px;
-    }
-    header img {
-      height: 40px;
+      padding: 10px 20px;
     }
     header .logo {
       display: flex;
+      flex-direction: column;
       align-items: center;
+    }
+    header .logo img {
+      width: 50px;
+      height: 50px;
     }
     header .logo span {
       font-size: 12px;
-      margin-left: 5px;
     }
-    header .actions button {
-      background: #e50914;
+    header .search-bar {
+      flex: 1;
+      margin: 0 20px;
+    }
+    header input[type="text"] {
+      width: 100%;
+      padding: 5px;
+      font-size: 16px;
+    }
+    header .auth-buttons button {
+      margin-left: 10px;
+      padding: 5px 10px;
+      background-color: red;
       color: white;
       border: none;
-      padding: 8px 12px;
-      margin-left: 10px;
-      border-radius: 4px;
       cursor: pointer;
     }
-    .search-bar {
-      text-align: center;
-      margin: 20px;
-    }
-    .search-bar input {
-      padding: 10px;
-      width: 60%;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
     nav {
-      background: #fff;
+      background-color: #222;
+      color: white;
       display: flex;
-      overflow-x: auto;
-      padding: 10px;
-      border-top: 1px solid #ddd;
-      border-bottom: 1px solid #ddd;
-    }
-    nav a {
-      margin-right: 20px;
-      text-decoration: none;
-      color: #000;
-      font-weight: bold;
+      justify-content: space-around;
+      padding: 10px 0;
     }
     .products {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 20px;
       padding: 20px;
     }
     .product {
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      overflow: hidden;
-      text-align: center;
+      background-color: white;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
     .product img {
       width: 100%;
-      height: 250px;
-      object-fit: cover;
+      border-radius: 10px;
     }
     .product h3 {
-      margin: 10px 0;
-      font-size: 18px;
+      font-size: 16px;
+      margin: 10px 0 5px;
     }
     .product p {
-      padding: 0 10px;
       font-size: 14px;
+      margin: 5px 0;
     }
-    .price {
-      color: green;
+    .product .price {
       font-weight: bold;
-      margin: 10px 0;
+      margin: 5px 0;
     }
-    .btns {
-      display: flex;
-      justify-content: space-around;
-      padding: 10px;
-    }
-    .btns button {
-      padding: 8px 12px;
-      background: #000;
+    .product button {
+      background-color: red;
       color: white;
       border: none;
-      border-radius: 4px;
+      padding: 5px 10px;
       cursor: pointer;
+      margin-right: 5px;
     }
-
-    /* Login Popup */
+    .login-popup {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 20px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+      display: none;
+      z-index: 1000;
+    }
     .overlay {
       position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
       display: none;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      z-index: 10;
-    }
-    .login-box {
-      background: white;
-      padding: 30px;
-      max-width: 400px;
-      margin: 100px auto;
-      position: relative;
-      animation: slideIn 0.4s ease;
-      border-radius: 8px;
-    }
-    .login-box h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .login-box input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    .login-box button {
-      width: 100%;
-      padding: 10px;
-      background: #e50914;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      margin-top: 10px;
-    }
-    .close-btn {
-      position: absolute;
-      top: 10px; right: 15px;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    @keyframes slideIn {
-      from { opacity: 0; transform: translateY(-50px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @media (max-width: 600px) {
-      header, .search-bar, nav, .btns {
-        flex-direction: column;
-        align-items: center;
-      }
+      z-index: 999;
     }
   </style>
 </head>
-<body>
 
+<body>
   <header>
     <div class="logo">
-      <img src="https://cdn-icons-png.flaticon.com/512/892/892458.png" alt="logo"/>
+      <img src="https://via.placeholder.com/50x50" alt="FA-Tshirt Logo" />
       <span>FA-Tshirt</span>
     </div>
-    <div class="actions">
-      <button onclick="showLogin()">Login</button>
+    <div class="search-bar">
+      <input type="text" placeholder="Search for products..." />
+    </div>
+    <div class="auth-buttons">
+      <button onclick="showLoginPopup()">Login</button>
       <button>Cart</button>
     </div>
   </header>
 
-  <div class="search-bar">
-    <input type="text" placeholder="Search for products..."/>
-  </div>
-
   <nav>
-    <a href="#">All</a>
-    <a href="#">Men</a>
-    <a href="#">Women</a>
-    <a href="#">Oversized</a>
-    <a href="#">Trendy</a>
+    <span>Men</span>
+    <span>Women</span>
+    <span>Oversized</span>
+    <span>Drop Shoulder</span>
+    <span>Casuals</span>
+    <span>Stylish</span>
   </nav>
 
   <div class="products">
     <div class="product">
-      <img src="https://www.dropbox.com/scl/fi/qg23nbgt17v3c1fjmz9yd/Top-Fashionista-__-Striped-Off-Shoulder-Tops-for-Nautical-Chic.jfif?raw=1" />
-      <h3>Striped Off-Shoulder Top</h3>
-      <p>Nautical chic striped off-shoulder design for fashionistas.</p>
-      <div class="price">₹279</div>
-      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+      <img src="https://www.dropbox.com/scl/fi/qg23nbgt17v3c1fjmz9yd/Top-Fashionista-__-Striped-Off-Shoulder-Tops-for-Nautical-Chic.jfif?rlkey=bpy2gearchgh7q2qqn9wnb1jo&raw=1" alt="Top Fashionista" />
+      <h3>Top Fashionista - Off Shoulder Top</h3>
+      <p class="price">₹299</p>
+      <button>Add to Cart</button>
+      <button>Buy Now</button>
     </div>
     <div class="product">
-      <img src="https://www.dropbox.com/scl/fi/jtsaogqxtxzg5llso50j2/Vintage-Vertical-Painting-Over-Fit-T-Shirt.jfif?raw=1" />
-      <h3>Vintage Vertical T-Shirt</h3>
-      <p>Vertical painting print with oversized street fashion vibes.</p>
-      <div class="price">₹299</div>
-      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+      <img src="https://www.dropbox.com/scl/fi/jtsaogqxtxzg5llso50j2/Vintage-Vertical-Painting-Over-Fit-T-Shirt.jfif?rlkey=if3qhrugq8p04uoawamc3uovl&raw=1" alt="Vintage T-Shirt" />
+      <h3>Vintage Vertical Painting T-Shirt</h3>
+      <p class="price">₹349</p>
+      <button>Add to Cart</button>
+      <button>Buy Now</button>
     </div>
     <div class="product">
-      <img src="https://www.dropbox.com/scl/fi/uuigb0k9n6514zebl6h35/Women-s-Men-s-Clothing-Shop-Online-Fashion.jfif?raw=1" />
-      <h3>Unisex Fashion Tee</h3>
-      <p>Trendy t-shirt for men and women available in all sizes.</p>
-      <div class="price">₹259</div>
-      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+      <img src="https://www.dropbox.com/scl/fi/uuigb0k9n6514zebl6h35/Women-s-Men-s-Clothing-Shop-Online-Fashion.jfif?rlkey=mlq1ccpq251z26z3c3ka0tp4r&raw=1" alt="Unisex Fashion Tee" />
+      <h3>Unisex Clothing Tee</h3>
+      <p class="price">₹279</p>
+      <button>Add to Cart</button>
+      <button>Buy Now</button>
     </div>
     <div class="product">
-      <img src="https://www.dropbox.com/scl/fi/8imuntoe8pyurqcsjt16b/Oversized-T-Shirt-Short-Sleeve-Cotton-T-Shirt-In-Black.jfif?raw=1" />
-      <h3>Black Cotton Oversized</h3>
-      <p>100% cotton black oversized T-shirt – smooth and stylish.</p>
-      <div class="price">₹299</div>
-      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+      <img src="https://www.dropbox.com/scl/fi/8imuntoe8pyurqcsjt16b/Oversized-T-Shirt-Short-Sleeve-Cotton-T-Shirt-In-Black.jfif?rlkey=55r3q8jh0u0qz1p3csz4o3sqo&raw=1" alt="Black Oversized Tee" />
+      <h3>Oversized Black Cotton T-Shirt</h3>
+      <p class="price">₹329</p>
+      <button>Add to Cart</button>
+      <button>Buy Now</button>
     </div>
     <div class="product">
-      <img src="https://www.dropbox.com/scl/fi/kbelphqsfmkatwno9zzbk/_Ultimate-Style_-Men-s-Best-Outfits-with-Drop-Shoulders_-_Drop-Shoulders-Delight_-Men-s-Best-Outfits.jfif?raw=1" />
-      <h3>Drop Shoulder Delight</h3>
-      <p>Men's fashion with ultimate drop shoulder design and fit.</p>
-      <div class="price">₹289</div>
-      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+      <img src="https://www.dropbox.com/scl/fi/kbelphqsfmkatwno9zzbk/_Ultimate-Style_-Men-s-Best-Outfits-with-Drop-Shoulders_-_Drop-Shoulders-Delight_-Men-s-Best-Outfits.jfif?rlkey=vs6x7vfq3a3fm0iseultaobzg&raw=1" alt="Drop Shoulder Style" />
+      <h3>Drop Shoulders Men Style</h3>
+      <p class="price">₹399</p>
+      <button>Add to Cart</button>
+      <button>Buy Now</button>
     </div>
     <div class="product">
-      <img src="https://www.dropbox.com/scl/fi/w35xp71onk4s5p9hqq40w/Oversized-Drop-Shoulder-T-Shirt-Charcoal-Grey-_-XXS.jfif?raw=1" />
-      <h3>Charcoal Grey XXS Tee</h3>
-      <p>Oversized drop shoulder t-shirt in unique charcoal grey tone.</p>
-      <div class="price">₹269</div>
-      <div class="btns"><button>Add to Cart</button><button>Buy Now</button></div>
+      <img src="https://www.dropbox.com/scl/fi/w35xp71onk4s5p9hqq40w/Oversized-Drop-Shoulder-T-Shirt-Charcoal-Grey-_-XXS.jfif?rlkey=h56tbbgnasz6jdt2b9lsh405j&raw=1" alt="Grey Oversized Tee" />
+      <h3>Charcoal Grey Oversized Tee</h3>
+      <p class="price">₹349</p>
+      <button>Add to Cart</button>
+      <button>Buy Now</button>
     </div>
   </div>
 
-  <!-- Login Popup -->
-  <div class="overlay" id="loginOverlay">
-    <div class="login-box">
-      <span class="close-btn" onclick="closeLogin()">&times;</span>
-      <h2>Login to FA-Tshirt</h2>
-      <input type="email" placeholder="Enter Email" />
-      <input type="text" placeholder="Enter OTP" />
-      <button>Login</button>
-    </div>
+  <div class="overlay" id="overlay"></div>
+  <div class="login-popup" id="loginPopup">
+    <h3>Login to FA-Tshirt</h3>
+    <input type="email" placeholder="Enter your email" /><br /><br />
+    <button onclick="hideLoginPopup()">Send OTP</button>
   </div>
 
   <script>
-    function showLogin() {
-      document.getElementById("loginOverlay").style.display = "block";
+    function showLoginPopup() {
+      document.getElementById('loginPopup').style.display = 'block';
+      document.getElementById('overlay').style.display = 'block';
     }
-    function closeLogin() {
-      document.getElementById("loginOverlay").style.display = "none";
+    function hideLoginPopup() {
+      document.getElementById('loginPopup').style.display = 'none';
+      document.getElementById('overlay').style.display = 'none';
     }
+    document.getElementById('overlay').addEventListener('click', hideLoginPopup);
   </script>
-
 </body>
+
 </html>
